--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build",
-		"lint": "eslint .",
-		"preview": "vite preview"
+		"dev": "react-router dev",
+		"build": "react-router build",
+		"start": "react-router-serve ./build/client",
+		"typecheck": "tsc",
+		"lint": "eslint ."
 	},
 	"dependencies": {
 		"@anthropic-ai/sdk": "^0.67.0",
+		"isbot": "^4.1.1",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-router": "^7.9.4",
 		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
+		"@react-router/dev": "^7.9.4",
+		"@react-router/node": "^7.9.4",
 		"@tailwindcss/postcss": "^4.1.15",
 		"@types/node": "^24.6.0",
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
-		"@vitejs/plugin-react": "^5.0.4",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^9.36.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
@@ -31,6 +35,7 @@
 		"tailwindcss": "^4.1.15",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.45.0",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
