--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,5 @@
 			"~/*": ["./app/*"]
 		}
 	},
-	"include": ["app/**/*"],
-	"references": [{ "path": "./tsconfig.app.json" }]
+	"include": ["app/**/*"]
 }
