--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "^19.1.1",
 		"react-router": "^7.9.4",
 		"serve": "^14.2.4",
+		"uuid": "^13.0.0",
 		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
