Inject Open Graph and Twitter meta tags into index.html: Create a new script to enhance SEO and social media sharing for the vibecomposer.studio website by updating the HTML with relevant meta tags during the build process.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "react-router dev",
-		"build": "react-router build",
+		"build": "react-router build && node inject-meta-tags.js",
 		"start": "serve ./build/client -s -p 4173",
 		"typecheck": "tsc",
 		"lint": "eslint ."
