--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@anthropic-ai/sdk": "^0.67.0",
 		"@clerk/clerk-react": "^5.53.3",
 		"@clerk/themes": "^2.4.29",
+		"dotenv": "^17.2.3",
 		"isbot": "^4.1.1",
+		"mongoose": "^8.19.2",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-router": "^7.9.4",
