--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "react-router dev",
 		"build": "react-router build && node inject-meta-tags.js",
-		"start": "NODE_ENV=production react-router dev",
+		"start": "node server.mjs",
 		"typecheck": "tsc",
 		"lint": "eslint ."
 	},
