--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "react-router dev",
 		"build": "react-router build && node inject-meta-tags.js",
-		"start": "npm run dev",
+		"start": "serve ./build/client -p ${PORT:-5173}",
 		"typecheck": "tsc",
 		"lint": "eslint ."
 	},
