--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "react-router dev",
 		"build": "react-router build && node inject-meta-tags.js",
-		"start": "@react-router/serve build/server/index.js --port ${PORT:-3000}",
+		"start": "npx @react-router/serve build/server/index.js",
 		"typecheck": "tsc",
 		"lint": "eslint ."
 	},
