--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@clerk/clerk-react": "^5.53.3",
 		"@clerk/themes": "^2.4.29",
 		"@react-router/serve": "^7.9.4",
+		"@seline-analytics/web": "^1.0.0",
 		"dotenv": "^17.2.3",
 		"isbot": "^4.1.1",
 		"mongoose": "^8.19.2",
